--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <textarea type="text" id="Name" class="w-full bg-slate-200 text-gelap p-3 rounded-md focus:outline-none h-32"></textarea>
                 </div>
                 <div class="w-full px-4">
-                    <button class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full w-full hover:opacity-75 hover:shadow-lg transition duration-500">Send!</button>
+                    <button type="submit" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full w-full hover:opacity-75 hover:shadow-lg transition duration-500">Send!</button>
                 </div>
             </div>
             </form>
@@ -185,7 +185,7 @@
     <!-- Contact Section End -->
 
     <!-- Footer//Feeter Section Start -->
-     <footer class="bg-gelap pt-24 pb-12">
+     <footer class="bg-gradient-to-b from-gelap to-black pt-24 pb-12">
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-12 text-slate-300 font-medium md:w-1/2">
